[package]
name = "sales-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
dotenv = "0.15.0"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
serde = "1.0.181"
sqlx = {version = "0.7.1", features = ["bigdecimal", "mysql", "uuid"]}
