[package]
name = "sales-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
dotenv = "0.15.0"
mysql = "24.0.0"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
sales-api = {path = "../sales-api"}
sqlx = {version = "0.7.1", features = ["runtime-tokio-native-tls", "mysql", "bigdecimal", "uuid"]}
tokio = {version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"]}
uuid = {version = "1.4.1", features = ["v4"]}
